<resources>
    <string name="app_name">P.CTSV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hoten">Họ va Tên: </string>
    <string name="mssv">Mã Số SV: </string>
    <string name="gioiTinh">Giới Tính: </string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="ngaySinh">Ngày Sinh: </string>
    <string name="khoa">Khoa: </string>
    <string name="khoas">Khóa: </string>
    <string name="lop">Lớp:</string>
    <string name="sodienthoai">SĐT: </string>
    <string name="soCoDinh">Cố Định</string>
    <string name="email">Email:</string>
    <string name="btnLuuLai">Lưu Lại</string>
    <string name="btnDangNhap">Đăng nhập</string>
    <string name="doituong">Đối tượng</string>
    <string name="ngaybatdau">Ngày bắt đầu</string>
    <string name="ngayketthuc">Ngày kết thúc</string>
    <string name="sinhvien">Sinh viên</string>
    <string name="bancansu">Ban cán sự</string>
    <string name="phongcontacsinhvien">Phòng công tác sinh viên</string>
    <string name="btnBatDauDanhGia">Bắt đầu</string>
    <string name="btnDanhGia">Đánh giá</string>
    <string name="bangtongketdiemrenluyen">Bảng Tổng Kết Điểm Rèn Luyện</string>
    <string name="hocky">Học Kỳ</string>
    <string name="namhoc">Năm học</string>
    <string name="diemrenluyen">Điểm rèn luyện</string>
    <string name="xeploai">Xếp loại</string>
    <string name="diemtrungbinh">Điểm trung bình:</string>
    <string name="gioi">Giỏi</string>
    <string name="timeofregistration">Time of Registration: </string>
    <string name="Receivingtime">Receiving time:</string>
    <string name="username">Username:</string>
    <string name="passOld">Password old: </string>
    <string name="passNew">Password new: </string>
    <string name="passConfirm">Confirm: </string>
    <string name="btnChange">Change</string>
    <string name="listForm">Danh sách biểu mẫu</string>
    <string name="PCTSV">Student Affairs Office</string>
    <string name="views">Views:</string>
    <string name="postTime">Post time:</string>
    <string name="listStudent">Danh sách lớp</string>
</resources>
